overflow x fixed

--- a/frontend/digital-twin-panel/src/app/assets/scss/core/components/_dropdown.scss
+++ b/frontend/digital-twin-panel/src/app/assets/scss/core/components/_dropdown.scss
@@ -5,7 +5,6 @@
   .dropdown-content {
     overflow: hidden;
     transform-origin: top;
-    overflow-x: scroll;
     max-height: 1000px;
     transform: scaleY(1);
     transform-origin: top;
